# useless-bot

./: .gitignore  .prettierrc  .sample.env  Cargo.toml  README.md  env.sample.rb  package.json  pnpm-lock.yaml  rakefile  tsconfig.json
app/: client.ts  index.ts  logger.ts  registries.ts
app/autocomplete/: index.ts  sticker.ts
app/commands/: about.ts  command.ts  letMeGoogleItForYou.ts  ping.ts
app/commands/random/: choice.ts  coin.ts  dice.ts  index.ts
app/commands/sticker/: index.ts  preview.ts  replyWithSticker.ts  send.ts  simple_list.ts
app/constants/: appVariables.ts  commands.ts
app/dto/: sticker.ts
app/store/: pbstore.ts
app/utils/: functional.ts
discord-bot/: Cargo.toml
discord-bot/src/: config.rs  main.rs  types.rs
discord-bot/src/commands/: common.rs  get_commands.rs  mod.rs  stickers.rs
discord-bot/src/contexts/: api_auth_token_context.rs  config_context.rs  mod.rs
discord-bot/src/dtos/: mod.rs
discord-bot/src/dtos/pocketbase/: mod.rs
discord-bot/src/dtos/pocketbase/admin/: auth_with_password.rs  mod.rs
discord-bot/src/dtos/pocketbase/collections/: mod.rs  stickers.rs
discord-bot/src/events/: default_event_handler.rs  mod.rs
discord-bot/src/services/: api_service.rs  mod.rs  sticker_service.rs
pocketbase/: dockerfile
pocketbase/dev/: .env  docker-compose.yml
pocketbase/pb_migrations/: 1702567580_created_stickers.js  1727533870_created_stickers.js  1727533906_updated_stickers.js  1727619880_updated_stickers.js
src/: index.ts  main.rs
