[package]
name = "useless-bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
poise = "0.5.7"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
rusqlite = "0.30.0"
serde = "1.0.193"
tokio = "1.35.0"
